<resources>
    <string name="app_name">Prevozi+</string>
    <string name="register">Register</string>
    <string name="birthday">Birthday</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username (optional)</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login">Prijava</string>
    <string name="action_settings">Nastavitve</string>
    <string name="action_add">Dodaj prevoz</string>
    <string name="placeholder">10</string>
    <string name="evro"> €</string>
    <string name="action_favorite">Priljubljeno</string>
    <string name="search_title">Iskanje</string>
    <string name="search_hint">Išči prevoz</string>
    <string name="title_activity_landing">LandingActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="placeholdercas">15:00</string>
    <string name="kam">Maribor</string>
    <string name="iz">Koper</string>
    <string name="placeholderime">Miha</string>
    <string name="refresh">refresh</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="dodajLastnost">Dodaj lastnost</string>
    <string name="lastnosti">Preostale slike</string>
    <string name="desnaPuscica"> + </string>
    <string name="levaPuscica"> - </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <string name="menu_remove">Izbriši prevoz</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_racun">Račun</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Uporabniško ime</string>
    <string name="pref_default_display_name">NikoKolar</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Notifications -->
    <string name="pref_header_obvestila">Obvestila</string>

    <string name="pref_title_new_message_notifications">Prejemaj obvestila</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Nastavitve za SMS sporočanje -->
    <string name="pref_header_sporocanje">Sporočanje</string>

    <string name="pref_title_prejemaj_sporocila">SMS Sistem</string>
    <string name="pref_description_prejemaj_sporocila">Avtomatsko odgovarjaj na sporočila o rezervacijah in statusu prevozov
    </string>

    <string name="pref_title_sprejmi_potnika">Avtomatsko sprejemanje</string>
    <string name="pref_description_sprejmi_potnika">Dovoli aplikaciji, da avtomatsko sprejema potnike
    </string>

    <string name="pref_title_neznane_stevilke">Odgovarjaj neznanim številkam</string>
    <string name="pref_description_neznane_stevilke">Odgovarjanje na nezaupljive, sumljive ali neznane številke
    </string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Podatki in Sinhronizacija</string>

    <string name="pref_title_sync_frequency">Pogostost sinhronizacije</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minut</item>
        <item>30 minut</item>
        <item>1 ura</item>
        <item>3 ure</item>
        <item>6 ur</item>
        <item>Nikoli</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_mapzoom">
        <item>5</item>
        <item>10</item>
        <item>15</item>
    </string-array>

    <string-array name="list_preference_radius">
        <item>1000m</item>
        <item>500m</item>
        <item>250m</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">Sistemske nastavitve sinhronizacije</string>

    <!-- Nastavitve za lokacijo -->
    <string name="pref_header_lokacija">Lokacija in Zemljevid</string>

    <!-- Nastavitve za informacije prevoza -->
    <string name="pref_header_prevoz_nastavitve">Info prevoza</string>

    <!-- Nastavitve za kontakt -->
    <string name="pref_header_kontakt">Kontakti</string>

    <!-- Nastavitve za "o ekipi" -->
    <string name="pref_header_ekipa">O ekipi</string>
    <string name="title_activity_podrobnosti">PodrobnostiActivity</string>
    <string name="title_activity_maps">Map</string>
</resources>
