<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="nameplaceholder.prevazanjaorg.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_account_black_24dp"
        android:title="@string/pref_header_racun" />

    <header
        android:fragment="nameplaceholder.prevazanjaorg.SettingsActivity$SporocanjeFragment"
        android:icon="@drawable/ic_message_black_24dp"
        android:title="@string/pref_header_sporocanje" />

    <header
        android:fragment="nameplaceholder.prevazanjaorg.SettingsActivity$ZemljevidFragment"
        android:icon="@drawable/ic_location_black_24dp"
        android:title="@string/pref_header_lokacija" />

    <header
        android:fragment="nameplaceholder.prevazanjaorg.SettingsActivity$KontaktFragment"
        android:icon="@drawable/ic_contacts_black_24dp"
        android:title="@string/pref_header_kontakt" />

    <header
        android:fragment="nameplaceholder.prevazanjaorg.SettingsActivity$EkipaFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_ekipa" />


</preference-headers>
