<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <item android:id="@+id/listSearchPonujam"
        android:title="@string/search_title"
        android:icon="@drawable/ic_action_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />
    <item android:id="@+id/btnPlus"
        android:title="@string/action_add"
        android:icon="@drawable/ic_add_white_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/btnSettings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        app:showAsAction="always" />
</menu>